--- a/resources/views/ItemList/Components/CategoryItem.twig
+++ b/resources/views/ItemList/Components/CategoryItem.twig
@@ -26,6 +26,7 @@
                         <category-image-carousel template="#vue-category-image-carousel"
                                                  :image-urls-data="itemData.images | itemImages(imageUrlAccessor)"
                                                  :alt-text="itemData | itemName"
+                                                 :title-text="itemData | itemName"
                                                  :item-url="itemData | itemURL"
                                                  :show-dots="{{ ceresConfig.item.categoryShowDots | json_encode }}"
                                                  :show-nav="{{ ceresConfig.item.categoryShowNav | json_encode }}"
