--- a/resources/views/Widgets/Common/ImageCarouselWidget.twig
+++ b/resources/views/Widgets/Common/ImageCarouselWidget.twig
@@ -8,15 +8,15 @@
 
 {{ Twig.set("slides", "[]") }}
 
-{% for param in widget.settings.slides %}
+{% for param in widget.settings.slides.mobile %}
 
-    {{ Twig.set("slide", "{ style: " ~ (param.style.mobile | json_encode) ~ " }") }}
+    {{ Twig.set("slide", "{ }") }}
 
     {% set pushCurrentSlide = false %}
 
-    {% if param.categoryId.mobile | trim is not empty %}
+    {% if param.categoryId | trim is not empty %}
 
-        {{ Twig.set("category", Twig.call("services.category.get", [param.categoryId.mobile])) }}
+        {{ Twig.set("category", Twig.call("services.category.get", [param.categoryId])) }}
         {{ Twig.set("categoryUrl", Twig.call("services.category.getURL", ["$category"]) ) }}
 
         {{ Twig.set("slide", "slide | merge({ name: category.details[0].name })") }}
@@ -25,9 +25,9 @@
 
         {% set pushCurrentSlide = true %}
 
-    {% elseif param.variationId.mobile | trim is not empty %}
+    {% elseif param.variationId | trim is not empty %}
 
-        {{ Twig.set("itemData", Twig.call("services.item.getVariation", [param.variationId.mobile])) }}
+        {{ Twig.set("itemData", Twig.call("services.item.getVariation", [param.variationId])) }}
         {{ Twig.set("itemData", "itemData.documents[0].data") }}
         {{ Twig.set("itemImage", "itemData.images | itemImages | orderByKey('position') | first") }}
 
@@ -43,17 +43,17 @@
 
     {% endif %}
 
-    {% if param.customImagePath.mobile | trim is not empty %}
+    {% if param.customImagePath | trim is not empty %}
 
-        {{ Twig.set("slide", "slide | merge({ imageUrl: #{ param.customImagePath.mobile | json_encode } })") }}
+        {{ Twig.set("slide", "slide | merge({ imageUrl: #{ param.customImagePath | json_encode } })") }}
 
         {% set pushCurrentSlide = true %}
 
     {% endif %}
 
-    {% if param.headline.mobile | trim is not empty %}
+    {% if param.headline | trim is not empty %}
 
-        {{ Twig.set("slide", "slide | merge({ name: #{ (param.headline.mobile | json_encode) } })") }}
+        {{ Twig.set("slide", "slide | merge({ name: #{ (param.headline | json_encode) } })") }}
 
     {% endif %}
 
@@ -71,7 +71,6 @@
 
 <div class="widget widget-image-carousel widget-{{ widget.settings.appearance.mobile | default('primary') }} widget-proportional">
     <div id="image-carousel_{{ carouselId }}" class="widget-inner carousel slide" data-ride="carousel">
-
         <div class="carousel-inner" role="listbox">
             {{ Twig.for("slide", "slides") }}
             <div class="carousel-item{{ Twig.if("loop.first") }} active{{ Twig.endif() }}">
