CHANGE Footer - add class .footer to the layout container area

--- a/resources/views/PageDesign/Partials/Footer.twig
+++ b/resources/views/PageDesign/Partials/Footer.twig
@@ -135,7 +135,7 @@
     </div>
 </div>
 {% else %}
-    <div class="container-max">
+    <div class="footer container-max">
         <div class="row">
             <div class="col">
                 {{ footerContainer | raw }}
