FIX ImageBoxWidget - the widget will now load the item data properly

--- a/resources/views/Widgets/Common/ImageBoxWidget.twig
+++ b/resources/views/Widgets/Common/ImageBoxWidget.twig
@@ -27,7 +27,7 @@
 
 {% elseif variationId | trim is not empty %}
     
-    {{ Twig.set("itemData", Twig.call("services.item.getVariation", [variationId])) }}
+    {{ Twig.set("itemData", Twig.call("services.item.getVariation", variationId)) }}
     {{ Twig.set("itemData", "itemData.documents[0].data") }}
     {{ Twig.set("itemImage", "itemData.images | itemImages | orderByKey('position') | first") }}
 
