--- a/resources/views/Widgets/Common/SeparatorWidget.twig
+++ b/resources/views/Widgets/Common/SeparatorWidget.twig
@@ -1,1 +1,3 @@
-<hr class="m-y-2">
+{% if isPreview %}<div class="widget-editable-min-height">{% endif %}
+    <hr class="m-y-2">
+{% if isPreview %}</div>{% endif %}
