CHANGE FourColumnWidget - add class widget-grid-1-1-1-1 to set a padding-bottom to proportional widgets in four column grid

--- a/resources/scss/ceres/widgets/Helper/_base-widget.scss
+++ b/resources/scss/ceres/widgets/Helper/_base-widget.scss
@@ -84,6 +84,11 @@
     {
         padding-bottom: 66.6666%;
     }
+    
+    .widget-grid-1-1-1-1 > .widget-inner .widget.widget-proportional
+    {
+        padding-bottom: 100%;
+    }
 
     .widget-grid-1-2 > .widget-inner:last-child .widget-proportional,
     .widget-grid-2-1 > .widget-inner:first-child .widget-proportional,
