--- a/resources/views/Widgets/Grid/FourColumnWidget.twig
+++ b/resources/views/Widgets/Grid/FourColumnWidget.twig
@@ -1,4 +1,4 @@
-<div class="widget widget-grid">
+<div class="widget widget-grid widget-grid-1-1-1-1">
     <div class="widget-inner" data-builder-child-container="first">{{ children.first | raw }}</div>
     <div class="widget-inner" data-builder-child-container="second">{{ children.second | raw }}</div>
     <div class="widget-inner" data-builder-child-container="third">{{ children.third | raw }}</div>
