UPDATE AddToWishList - use vuex data to check state

--- a/resources/views/Item/Components/SingleItem.twig
+++ b/resources/views/Item/Components/SingleItem.twig
@@ -109,7 +109,7 @@
 
                     {% if "wish-list" in enabledRoutes or "all" in enabledRoutes %}
                         <div class="row">
-                            <add-to-wish-list template="#vue-add-to-wish-list" :variation-id="currentVariation.variation.id" :is-active="isInWishList"></add-to-wish-list>
+                            <add-to-wish-list :variation-id="currentVariation.variation.id"></add-to-wish-list>
                         </div>
                     {% endif %}
                 <!-- ./ITEM DETAIL -->
