CHANGE ListWidget - change div to ul/li structure

--- a/resources/scss/ceres/widgets/Common/_list-widget.scss
+++ b/resources/scss/ceres/widgets/Common/_list-widget.scss
@@ -8,6 +8,8 @@
             width: fit-content;
             margin-left: auto;
             margin-right: auto;
+            padding: 0;
+            list-style: none;
         }
     }
 }
