--- a/resources/views/Widgets/Common/ListWidget.twig
+++ b/resources/views/Widgets/Common/ListWidget.twig
@@ -2,17 +2,16 @@
 
 <div class="widget widget-list{% if hasPlaceholder %} widget-placeholder{% endif %}">
     <div class="widget-inner">
-        <div class="list-container">
-            {# FIXME: Should be an ul/li-structure #}
+        <ul class="list-container">
             {% for entry in widget.settings.texts.mobile %}
-                <div>
+                <li>
                     {% if widget.settings.icon.mobile != "none" %}
                         <i class="fa {{ widget.settings.icon.mobile }}" aria-hidden="true"></i>
                     {% endif %}
 
                     {{ entry }}
-                </div>
+                </li>
             {% endfor %}
-        </div>
+        </ul>
     </div>
 </div>
