UPDATE build files

--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -20687,6 +20687,8 @@ body.menu-is-visible {
   width: fit-content;
   margin-left: auto;
   margin-right: auto;
+  padding: 0;
+  list-style: none;
 }
 
 .widget-link-list .widget-inner {
