FIX static header widgets

--- a/resources/views/PageDesign/Partials/Header/Header.twig
+++ b/resources/views/PageDesign/Partials/Header/Header.twig
@@ -18,7 +18,7 @@
 {% if headerContainer is empty %}
     {% include "Ceres::PageDesign.Partials.Header.DefaultHeader" %}
 {% else %}
-<header id="page-header" class="top-bar pos-f-t">
+<header id="page-header" class="pos-f-t">
     {{ headerContainer | raw }}
 </header>
 {% endif %}
