--- a/resources/scss/ceres/widgets/Common/_list-widget.scss
+++ b/resources/scss/ceres/widgets/Common/_list-widget.scss
@@ -8,6 +8,7 @@
             width: fit-content;
             margin-left: auto;
             margin-right: auto;
+            margin-bottom: 0;
             padding: 0;
             list-style: none;
         }
