--- a/resources/scss/ceres/widgets/Grid/_grid-widget.scss
+++ b/resources/scss/ceres/widgets/Grid/_grid-widget.scss
@@ -8,20 +8,19 @@
         display: flex;
     }
 
-    .widget-inner
+    > .widget-inner
     {
         padding-left: 15px;
         padding-right: 15px;
         flex: 1;
     }
 
-    .widget-inner-stacked
+    > .widget-inner-stacked
     {
         margin-left: -15px;
         margin-right: -15px;
         display: flex;
         flex-direction: column;
-
     }
 
     @include media-breakpoint-up(md)
@@ -50,24 +49,24 @@
         .widget-inner {
             .widget-list {
                 position: relative;
+                height: 100%;
                 color: $footer-features-color;
                 background-color: $footer-features-bg;
                 margin-left: -15px;
                 margin-right: -15px;
                 padding-left: 15px;
                 padding-right: 15px;
+                box-sizing: content-box;
+                margin-bottom: 0;
             }
 
-            &:first-child {
-                .widget-list {
-                    margin-left: 0;
-                    padding-left: 0;
-                }
-            }
-            &:last-child {
-                .widget-list {
-                    margin-right: 0;
-                    padding-right: 0;
+            @include media-breakpoint-down(sm) {
+                &:not(:last-child) {
+                    .widget-list {
+                        .widget-inner {
+                            padding-bottom: 0;
+                        }
+                    }
                 }
             }
         }
