--- a/resources/scss/ceres/widgets/Common/_list-widget.scss
+++ b/resources/scss/ceres/widgets/Common/_list-widget.scss
@@ -11,6 +11,7 @@
             margin-bottom: 0;
             padding: 0;
             list-style: none;
+            text-align: center;
         }
     }
 }
