--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -20088,22 +20088,21 @@ body.menu-is-visible {
 
 .footer .widget-grid .widget-inner .widget-list {
   position: relative;
+  height: 100%;
   color: #4D4F4D;
   background-color: #dadae3;
   margin-left: -15px;
   margin-right: -15px;
   padding-left: 15px;
   padding-right: 15px;
+  box-sizing: content-box;
+  margin-bottom: 0;
 }
 
-.footer .widget-grid .widget-inner:first-child .widget-list {
-  margin-left: 0;
-  padding-left: 0;
-}
-
-.footer .widget-grid .widget-inner:last-child .widget-list {
-  margin-right: 0;
-  padding-right: 0;
+@media (max-width: 767px) {
+  .footer .widget-grid .widget-inner:not(:last-child) .widget-list .widget-inner {
+    padding-bottom: 0;
+  }
 }
 
 .widget-image-box > img {
@@ -20686,8 +20685,10 @@ body.menu-is-visible {
   width: fit-content;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 0;
   padding: 0;
   list-style: none;
+  text-align: center;
 }
 
 .widget-link-list .widget-inner {
