--- a/resources/css/ceres.scss
+++ b/resources/css/ceres.scss
@@ -18899,7 +18899,6 @@ nav.navbar.megamenu {
         -webkit-box-direction: normal;
             -ms-flex-direction: column;
                 flex-direction: column;
-
     }
 
     @include media-breakpoint-up(md)
@@ -18930,24 +18929,25 @@ nav.navbar.megamenu {
         .widget-inner {
             .widget-list {
                 position: relative;
+                height: 100%;
                 color: $footer-features-color;
                 background-color: $footer-features-bg;
                 margin-left: -15px;
                 margin-right: -15px;
                 padding-left: 15px;
                 padding-right: 15px;
+                -webkit-box-sizing: content-box;
+                        box-sizing: content-box;
+                margin-bottom: 0;
             }
 
-            &:first-child {
-                .widget-list {
-                    margin-left: 0;
-                    padding-left: 0;
-                }
-            }
-            &:last-child {
-                .widget-list {
-                    margin-right: 0;
-                    padding-right: 0;
+            @include media-breakpoint-down(sm) {
+                &:not(:last-child) {
+                    .widget-list {
+                        .widget-inner {
+                            padding-bottom: 0;
+                        }
+                    }
                 }
             }
         }
@@ -19519,8 +19519,10 @@ nav.navbar.megamenu {
             width: fit-content;
             margin-left: auto;
             margin-right: auto;
+            margin-bottom: 0;
             padding: 0;
             list-style: none;
+            text-align: center;
         }
     }
 }
