--- a/resources/views/Containers/ItemLists/ItemList1.twig
+++ b/resources/views/Containers/ItemLists/ItemList1.twig
@@ -9,7 +9,7 @@
 {% if listType == "cross_selling" %}
     {% set itemList = item.CrossSellingItems.documents %}
 {% elseif listType == "tag_list" %}
-    {% set itemList = services.itemLoader.loadForTemplate('Ceres::ItemList.ItemListView', itemLoaderPresets.tagList, {'tagIds': tagIds}).documents %}
+    {% set itemList = services.itemList.getItemList( listType, tagIds ).documents %}
 {% endif %}
 
 {% if listType == "last_seen" %}
