--- a/resources/scss/ceres/common/_structure.scss
+++ b/resources/scss/ceres/common/_structure.scss
@@ -84,6 +84,10 @@ body {
 		&.open-right{
 			overflow: hidden;
 
+			@include media-breakpoint-down(sm) {
+				position: fixed;
+			}
+
 			.wrapper-right{
 				@include media-breakpoint-up(md) {
 					width: 100vw;
@@ -112,16 +116,14 @@ body {
 		}
 
 		@include media-breakpoint-up(sm){
+		}
+
+		@include media-breakpoint-up(md){
 			&.open-right{
 				.wrapper-right{
 					width: $aside-columns-width;
 				}
 			}
-
-		}
-
-		@include media-breakpoint-up(md){
-			
 		}
 
 		@include media-breakpoint-up(lg){
