Improve markup of newsletter components

--- a/resources/scss/ceres/common/_buttons.scss
+++ b/resources/scss/ceres/common/_buttons.scss
@@ -1,5 +1,15 @@
 .input-group{
 
+	.input-unit + .input-group-btn
+	{
+		padding-bottom: $grid-gutter-width/2;
+
+		.btn
+		{
+			height: calc(2.8em + 1px);
+		}
+	}
+
 	&.vert{
 		.input-group-btn{
 			display: block;
