--- a/resources/views/Newsletter/Components/NewsletterInput.twig
+++ b/resources/views/Newsletter/Components/NewsletterInput.twig
@@ -4,7 +4,7 @@
             <form id="newsletter-input-form">
                 <div class="row">
                     <div class="col-xs-12 m-t-1" v-if="title">
-                        <h1>${ title }</h1>
+                        <span class="h1">${ title }</span>
                     </div>
                     <div class="col-xs-12 m-t-1" v-if="subTitle">
                         <span>${ subTitle }</span>
@@ -12,36 +12,29 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-xs-6 m-t-1" v-if="showNameInputs">
+                    <div class="col-xs-6" v-if="showNameInputs">
                         <div class="input-unit">
                             <label for="first_name_input">Vorname</label>
                             <input type="text" id="first_name_input" v-model="firstName">
                         </div>
                     </div>
-                    <div class="col-xs-6 m-t-1 p-l-1" v-if="showNameInputs">
+                    <div class="col-xs-6 p-l-0" v-if="showNameInputs">
                         <div class="input-unit">
                             <label for="last_name_input">Nachname</label>
                             <input type="text" id="last_name_input" v-model="lastName">
                         </div>
                     </div>
-                </div>
 
-                <div class="row">
-                    <div class="col-xs-12 m-t-1">
+                    <div class="col-xs-12">
                         <div class="input-group">
-                            <div class="p-r-1">
-                                <div class="input-unit" data-validate="text">
-                                    <label for="email_input_id">E-MAIL *</label>
-                                    <input type="email" id="email_input_id" v-model="email">
-                                </div>
+                            <div class="input-unit" data-validate="text">
+                                <label for="email_input_id">E-MAIL *</label>
+                                <input type="email" id="email_input_id" v-model="email">
                             </div>
-                            <div class="input-group-btn">
-                                <span>
-                                    <button type="button" class="btn btn-primary btn-newsletter" @click="validateData" :disabled="isDisabled">
-                                        <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
-                                        &nbsp;
-                                    </button>
-                                </span>
+                            <div class="input-group-btn p-l-1">
+                                <button type="button" class="btn btn-primary btn-newsletter" @click="validateData" :disabled="isDisabled">
+                                    <i class="fa fa-paper-plane-o" aria-hidden="true"></i>
+                                </button>
                             </div>
                         </div>
                     </div>
