FIX do not query breadcrumbs by id

--- a/resources/views/Category/Components/CategoryBreadcrumbs.twig
+++ b/resources/views/Category/Components/CategoryBreadcrumbs.twig
@@ -1,5 +1,5 @@
 <script type="x/template" id="vue-category-breadcrumbs">
-    <nav id="vue-rendered-breadcrumbs" style="display: none;" class="container-max small hidden-sm-down">
+    <nav style="display: none;" class="container-max small hidden-sm-down" data-component="breadcrumbs" data-renderer="vue">
         <ul class="breadcrumb">
             <li class="breadcrumb-item">
                 <a href="{{ homepageURL }}">
