--- a/resources/views/PageDesign/Partials/Header/Breadcrumb.twig
+++ b/resources/views/PageDesign/Partials/Header/Breadcrumb.twig
@@ -2,7 +2,7 @@
 {% set homepageURL = services.url.getHomepageURL() %}
 
 {% if categoryBreadcrumbs is not empty %}
-    <nav id="twig-rendered-breadcrumbs" class="container-max small hidden-sm-down">
+    <nav data-component="breadcrumbs" data-renderer="twig" class="container-max small hidden-sm-down">
         <ul class="breadcrumb">
             <li class="breadcrumb-item">
                 <a href="{{ homepageURL }}">
