--- a/resources/views/Customer/ResetPassword.twig
+++ b/resources/views/Customer/ResetPassword.twig
@@ -8,7 +8,7 @@
 {% block PageBody %}
     {{ component( "Ceres::Customer.Components.ResetPasswordForm") }}
 
-    <div class="container-max reset-pwd m-b-3">
+    <div class="container-max reset-pwd m-b-3 m-t-1">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-md-8 offset-md-2 col-lg-6 offset-lg-3 m-b-2">
                 <h1 class="h2">{{ trans("Ceres::Template.resetPwResetPassword") }}</h1>
