--- a/resources/views/Customer/Register.twig
+++ b/resources/views/Customer/Register.twig
@@ -8,7 +8,7 @@
 {% block PageBody %}   
 
     {{ component( "Ceres::Customer.Components.Registration") }}
-    <div class="registration container-max">
+    <div class="registration container-max m-t-1">
         <div class="row m-b-3">
             <div class="col-sm-10 offset-sm-1 col-md-6 offset-md-3">
                 <h1>
